--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
+    <script src="https://kit.fontawesome.com/f113bf746a.js" crossorigin="anonymous"></script>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -230,25 +230,25 @@
     </div>
     <div class="main-page-offers container">
         <div class="vertical-offers">
-            <div class="men offers offers-margin">
+            <a href="#" class="men offers offers-margin">
                 <img src="img/men.jpg" alt="men">
                 <p class="offers-name">Hot deal<br><span class="offers-special-font">for men</span></p>
-            </div>
-            <div class="accessories offers">
+            </a>
+            <a href="#" class="accessories offers">
                 <p class="offers-name">Luxurious & trendy<br><span class="offers-special-font">accessories</span>
                 </p>
-            </div>
+            </a>
         </div>
         <div class="vertical-offers">
-            <div class="women offers offers-margin">
+            <a href="#" class="women offers offers-margin">
                 <img src="img/women.jpg" alt="women">
                 <p class="offers-name">30% offer<br><span class="offers-special-font">women</span></p>
-            </div>
-            <div class="kids offers">
+            </a>
+            <a href="#" class="kids offers">
                 <img src="img/kids.jpg" alt="kids">
                 <p class="offers-name"><span class="new-arrivals">New arrivals</span><br><span
                         class="offers-special-font">for kids</span></p>
-            </div>
+            </a>
         </div>
     </div>
     <section class="item-sec">
@@ -258,7 +258,7 @@
             <div class="items-row">
                 <div class="item-box">
                     <div class="item">
-                        <a href="#" class="item-link">
+                        <a href="product.html" class="item-link">
                             <img src="img/Layer_2.jpg" alt="" class="item-picture">
                             <div class="text-box">
                                 <p class="item-description">Mango People T-shirt</p>
@@ -266,13 +266,18 @@
                             </div>
                         </a>
                         <div class="cart-box">
-                            <a href="" class="cart-link"></a>
+                            <a href="#" class="cart-link">
+                                <img src="img/add_to_cart.svg" alt="">
+                                <p class="cart-text">
+                                    Add to Cart
+                                </p>
+                            </a>
                         </div>
                     </div>
                 </div>
                 <div class="item-box">
                     <div class="item">
-                        <a href="#" class="item-link">
+                        <a href="product.html" class="item-link">
                             <img src="img/Layer_3.jpg" alt="" class="item-picture">
                             <div class="text-box">
                                 <p class="item-description">Mango People T-shirt</p>
@@ -280,13 +285,18 @@
                             </div>
                         </a>
                         <div class="cart-box">
-                            <a href="" class="cart-link"></a>
+                            <a href="#" class="cart-link">
+                                <img src="img/add_to_cart.svg" alt="">
+                                <p class="cart-text">
+                                    Add to Cart
+                                </p>
+                            </a>
                         </div>
                     </div>
                 </div>
                 <div class="item-box">
                     <div class="item">
-                        <a href="#" class="item-link">
+                        <a href="product.html" class="item-link">
                             <img src="img/Layer_4.jpg" alt="" class="item-picture">
                             <div class="text-box">
                                 <p class="item-description">Mango People T-shirt</p>
@@ -294,13 +304,18 @@
                             </div>
                         </a>
                         <div class="cart-box">
-                            <a href="" class="cart-link"></a>
+                            <a href="#" class="cart-link">
+                                <img src="img/add_to_cart.svg" alt="">
+                                <p class="cart-text">
+                                    Add to Cart
+                                </p>
+                            </a>
                         </div>
                     </div>
                 </div>
                 <div class="item-box">
                     <div class="item">
-                        <a href="#" class="item-link">
+                        <a href="product.html" class="item-link">
                             <img src="img/Layer_5.jpg" alt="" class="item-picture">
                             <div class="text-box">
                                 <p class="item-description">Mango People T-shirt</p>
@@ -308,7 +323,12 @@
                             </div>
                         </a>
                         <div class="cart-box">
-                            <a href="" class="cart-link"></a>
+                            <a href="#" class="cart-link">
+                                <img src="img/add_to_cart.svg" alt="">
+                                <p class="cart-text">
+                                    Add to Cart
+                                </p>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -316,7 +336,7 @@
             <div class="items-row">
                 <div class="item-box">
                     <div class="item">
-                        <a href="#" class="item-link">
+                        <a href="product.html" class="item-link">
                             <img src="img/Layer_6.jpg" alt="" class="item-picture">
                             <div class="text-box">
                                 <p class="item-description">Mango People T-shirt</p>
@@ -324,13 +344,18 @@
                             </div>
                         </a>
                         <div class="cart-box">
-                            <a href="" class="cart-link"></a>
+                            <a href="#" class="cart-link">
+                                <img src="img/add_to_cart.svg" alt="">
+                                <p class="cart-text">
+                                    Add to Cart
+                                </p>
+                            </a>
                         </div>
                     </div>
                 </div>
                 <div class="item-box">
                     <div class="item">
-                        <a href="#" class="item-link">
+                        <a href="product.html" class="item-link">
                             <img src="img/Layer_7.jpg" alt="" class="item-picture">
                             <div class="text-box">
                                 <p class="item-description">Mango People T-shirt</p>
@@ -338,13 +363,18 @@
                             </div>
                         </a>
                         <div class="cart-box">
-                            <a href="" class="cart-link"></a>
+                            <a href="#" class="cart-link">
+                                <img src="img/add_to_cart.svg" alt="">
+                                <p class="cart-text">
+                                    Add to Cart
+                                </p>
+                            </a>
                         </div>
                     </div>
                 </div>
                 <div class="item-box">
                     <div class="item">
-                        <a href="#" class="item-link">
+                        <a href="product.html" class="item-link">
                             <img src="img/Layer_8.jpg" alt="" class="item-picture">
                             <div class="text-box">
                                 <p class="item-description">Mango People T-shirt</p>
@@ -352,13 +382,18 @@
                             </div>
                         </a>
                         <div class="cart-box">
-                            <a href="" class="cart-link"></a>
+                            <a href="#" class="cart-link">
+                                <img src="img/add_to_cart.svg" alt="">
+                                <p class="cart-text">
+                                    Add to Cart
+                                </p>
+                            </a>
                         </div>
                     </div>
                 </div>
                 <div class="item-box">
                     <div class="item">
-                        <a href="#" class="item-link">
+                        <a href="product.html" class="item-link">
                             <img src="img/Layer_9.jpg" alt="" class="item-picture">
                             <div class="text-box">
                                 <p class="item-description">Mango People T-shirt</p>
@@ -366,7 +401,12 @@
                             </div>
                         </a>
                         <div class="cart-box">
-                            <a href="" class="cart-link"></a>
+                            <a href="#" class="cart-link">
+                                <img src="img/add_to_cart.svg" alt="">
+                                <p class="cart-text">
+                                    Add to Cart
+                                </p>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -412,6 +452,7 @@
             </ul>
         </div>
     </section>
+
     <div class="subscribe-block">
         <div class="subscribe-content container">
             <figure class="review">
@@ -420,8 +461,14 @@
                     <p class="review-txt">“Vestibulum quis porttitor dui! Quisque viverra nunc mi, a pulvinar purus
                         condimentum a. Aliquam condimentum mattis neque sed pretium”</p>
                     <p class="review-client"><span class="review-client-name">Bin Burhan</span><br>Dhaka, Bd</p>
+                    <div class="review-switch">
+                        <div class="review-switch-icon"></div>
+                        <div class="review-switch-icon"></div>
+                        <div class="review-switch-icon"></div>
+                    </div>
                 </figcaption>
             </figure>
+
             <form class="subscribe-form">
                 <h4 class="subscribe-h4">Subscribe</h4>
                 <p class="subscribe-p">FOR OUR NEWLETTER AND PROMOTION</p>
@@ -430,6 +477,7 @@
             </form>
         </div>
     </div>
+
     <footer class="footer container">
         <article class="footer-column">
             <div class="logo">
@@ -480,19 +528,19 @@
             </div>
             <div class="social-media-list">
                 <a href="#" class="social-media-icon">
-                    <img src="img/facebook.png" alt="google-plus" class="social-media-img">
-                </a>
-                <a href="#" class="social-media-icon-twit">
-                    <img src="img/twitter.png" alt="google-plus">
+                    <i class="fa-brands fa-facebook-f"></i>
                 </a>
                 <a href="#" class="social-media-icon">
-                    <img src="img/in.png" alt="google-plus">
+                    <i class="fa-brands fa-twitter"></i>
                 </a>
                 <a href="#" class="social-media-icon">
-                    <img src="img/pinterest.png" alt="google-plus">
+                    <i class="fa-brands fa-linkedin-in"></i>
                 </a>
                 <a href="#" class="social-media-icon">
-                    <img src="img/google.png" alt="google-plus">
+                    <i class="fa-brands fa-pinterest-p"></i>
+                </a>
+                <a href="#" class="social-media-icon">
+                    <i class="fa-brands fa-google-plus-g"></i>
                 </a>
             </div>
     </footer>
