--- a/checkout.html
+++ b/checkout.html
@@ -7,15 +7,16 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
         rel="stylesheet">
-    <script src="https://kit.fontawesome.com/f113bf746a.js" crossorigin="anonymous"></script>
+        <script src="https://kit.fontawesome.com/f113bf746a.js" crossorigin="anonymous"></script>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Brand Store - Main Page</title>
+    <title>Brand Store - Checkout</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+
     <div class="menu">
         <div class="menu-top container">
             <div class="menu-top-left">
@@ -222,236 +223,75 @@
             </nav>
         </div>
     </div>
-    <div class="first-page">
-        <div class="first-page-content container">
-            <h1 class="first-page-h1"><span class="the-brand">THE BRAND</span><br>
-                OF LUXURIOUS <span class="fashion">FASHION</span></h1>
-        </div>
-    </div>
-    <div class="main-page-offers container">
-        <div class="vertical-offers">
-            <a href="#" class="men offers offers-margin">
-                <img src="img/men.jpg" alt="men">
-                <p class="offers-name">Hot deal<br><span class="offers-special-font">for men</span></p>
-            </a>
-            <a href="#" class="accessories offers">
-                <p class="offers-name">Luxurious & trendy<br><span class="offers-special-font">accessories</span>
-                </p>
-            </a>
-        </div>
-        <div class="vertical-offers">
-            <a href="#" class="women offers offers-margin">
-                <img src="img/women.jpg" alt="women">
-                <p class="offers-name">30% offer<br><span class="offers-special-font">women</span></p>
-            </a>
-            <a href="#" class="kids offers">
-                <img src="img/kids.jpg" alt="kids">
-                <p class="offers-name"><span class="new-arrivals">New arrivals</span><br><span
-                        class="offers-special-font">for kids</span></p>
-            </a>
-        </div>
-    </div>
-    <section class="item-sec">
-        <div class="container">
-            <h3 class="featured-items-h3">Featured Items</h3>
-            <p class="featured-items-p">Shop for items based on what we featured in this week</p>
-            <div class="items-row">
-                <div class="item-box">
-                    <div class="item">
-                        <a href="product.html" class="item-link">
-                            <img src="img/Layer_2.jpg" alt="" class="item-picture">
-                            <div class="text-box">
-                                <p class="item-description">Mango People T-shirt</p>
-                                <p class="item-price">$52.00</p>
-                            </div>
-                        </a>
-                        <div class="cart-box">
-                            <a href="#" class="cart-link">
-                                <img src="img/add_to_cart.svg" alt="">
-                                <p class="cart-text">
-                                    Add to Cart
-                                </p>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <div class="item-box">
-                    <div class="item">
-                        <a href="product.html" class="item-link">
-                            <img src="img/Layer_3.jpg" alt="" class="item-picture">
-                            <div class="text-box">
-                                <p class="item-description">Mango People T-shirt</p>
-                                <p class="item-price">$52.00</p>
-                            </div>
-                        </a>
-                        <div class="cart-box">
-                            <a href="#" class="cart-link">
-                                <img src="img/add_to_cart.svg" alt="">
-                                <p class="cart-text">
-                                    Add to Cart
-                                </p>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <div class="item-box">
-                    <div class="item">
-                        <a href="product.html" class="item-link">
-                            <img src="img/Layer_4.jpg" alt="" class="item-picture">
-                            <div class="text-box">
-                                <p class="item-description">Mango People T-shirt</p>
-                                <p class="item-price">$52.00</p>
-                            </div>
-                        </a>
-                        <div class="cart-box">
-                            <a href="#" class="cart-link">
-                                <img src="img/add_to_cart.svg" alt="">
-                                <p class="cart-text">
-                                    Add to Cart
-                                </p>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <div class="item-box">
-                    <div class="item">
-                        <a href="product.html" class="item-link">
-                            <img src="img/Layer_5.jpg" alt="" class="item-picture">
-                            <div class="text-box">
-                                <p class="item-description">Mango People T-shirt</p>
-                                <p class="item-price">$52.00</p>
-                            </div>
-                        </a>
-                        <div class="cart-box">
-                            <a href="#" class="cart-link">
-                                <img src="img/add_to_cart.svg" alt="">
-                                <p class="cart-text">
-                                    Add to Cart
-                                </p>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="items-row">
-                <div class="item-box">
-                    <div class="item">
-                        <a href="product.html" class="item-link">
-                            <img src="img/Layer_6.jpg" alt="" class="item-picture">
-                            <div class="text-box">
-                                <p class="item-description">Mango People T-shirt</p>
-                                <p class="item-price">$52.00</p>
-                            </div>
-                        </a>
-                        <div class="cart-box">
-                            <a href="#" class="cart-link">
-                                <img src="img/add_to_cart.svg" alt="">
-                                <p class="cart-text">
-                                    Add to Cart
-                                </p>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <div class="item-box">
-                    <div class="item">
-                        <a href="product.html" class="item-link">
-                            <img src="img/Layer_7.jpg" alt="" class="item-picture">
-                            <div class="text-box">
-                                <p class="item-description">Mango People T-shirt</p>
-                                <p class="item-price">$52.00</p>
-                            </div>
-                        </a>
-                        <div class="cart-box">
-                            <a href="#" class="cart-link">
-                                <img src="img/add_to_cart.svg" alt="">
-                                <p class="cart-text">
-                                    Add to Cart
-                                </p>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <div class="item-box">
-                    <div class="item">
-                        <a href="product.html" class="item-link">
-                            <img src="img/Layer_8.jpg" alt="" class="item-picture">
-                            <div class="text-box">
-                                <p class="item-description">Mango People T-shirt</p>
-                                <p class="item-price">$52.00</p>
-                            </div>
-                        </a>
-                        <div class="cart-box">
-                            <a href="#" class="cart-link">
-                                <img src="img/add_to_cart.svg" alt="">
-                                <p class="cart-text">
-                                    Add to Cart
-                                </p>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <div class="item-box">
-                    <div class="item">
-                        <a href="product.html" class="item-link">
-                            <img src="img/Layer_9.jpg" alt="" class="item-picture">
-                            <div class="text-box">
-                                <p class="item-description">Mango People T-shirt</p>
-                                <p class="item-price">$52.00</p>
-                            </div>
-                        </a>
-                        <div class="cart-box">
-                            <a href="#" class="cart-link">
-                                <img src="img/add_to_cart.svg" alt="">
-                                <p class="cart-text">
-                                    Add to Cart
-                                </p>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="browse-products">
-                <a href="#" class="browse-products-button">Browse All Products<i
-                        class="fa fa-long-arrow-right browse-products-button-arrow" aria-hidden="true"></i></a>
-            </div>
-    </section>
-    <section class="main-offer container">
-        <div class="main-offer-left">
-            <img src="img/gradient.png" alt="" class="main-offer-grd">
-            <p class="main-offer-txt">30% <span class="offer-txt">OFFER</span><br><span class="for-women">FOR
-                    WOMEN</span>
-            </p>
-        </div>
-        <div class="main-offer-description">
-            <ul class="main-offer-list">
-                <li class="main-offer-item-1">
-                    <div class="main-offer-item-description">
-                        <h4 class="main-offer-h4">Free Delivery</h4>
-                        <p class="main-offer-p">Worldwide delivery on all. Authorit tively morph next-generation
-                            innovation
-                            with extensive models.</p>
-                    </div>
-                </li>
-                <li class="main-offer-item-2">
-                    <div class="main-offer-item-description">
-                        <h4 class="main-offer-h4">Sales & Discounts</h4>
-                        <p class="main-offer-p">Worldwide delivery on all. Authorit tively morph next-generation
-                            innovation
-                            with extensive models.</p>
-                    </div>
-                </li>
-                <li class="main-offer-item-3">
-                    <div class="main-offer-item-description">
-                        <h4 class="main-offer-h4">Quality Assurance</h4>
-                        <p class="main-offer-p offer-p-margin">Worldwide delivery on all. Authorit tively morph
-                            next-generation innovation
-                            with extensive models.</p>
-                    </div>
-                </li>
+
+    <div class="product-top-block">
+        <div class="top-block-content container">
+            <h1 class="product-h1">New Arrivals</h1>
+            <ul class="product-crumbs">
+                <li><a href="index.html" class="product-crumbs-link">Home</a>&nbsp;/&nbsp;</li>
+                <li><a href="#" class="product-crumbs-link">Men</a>&nbsp;/&nbsp;</li>
+                <li><a href="#" class="product-crumbs-link-active">New Arrivals</a></li>
             </ul>
         </div>
-    </section>
+    </div>
+
+    <div class="container">
+        <h4 class="checkout-h4">01. Shipping Adress</h4>
+        <div class="checkout-ship-register">
+            <div class="checkout-shipping">
+                <p class="checkout-headings">Check as a guest or register</p>
+                <p class="checkout-p">Register with us for future convenience</p>
+                <div class="radio-button-register">
+                    <input type="radio" name="register" value="guest"><span class="radio-button-label">checkout as guest</span>
+                </div>
+                <div class="radio-button-register">
+                    <input type="radio" name="register" value="register"><span class="radio-button-label">register</span>
+                </div>
+                <p class="checkout-headings">register and save time!</p>
+                <p class="checkout-p">Register with us for future convenience</p>
+                <div class="register-list register-list-margin">
+                    <i class="fa fa-solid fa-angles-right checkout-arrows"></i>
+                    <p class="checkout-p no-margin-bottom">Fast and easy checkout</p>
+                </div>
+                <div class="register-list">
+                    <i class="fa fa-solid fa-angles-right checkout-arrows"></i>
+                    <p class="checkout-p no-margin-bottom">Easy access to your order history and status</p>
+                </div>
+                <a href="#" class="checkout-buttons-names">Continue</a>
+            </div>
+            <div class="checkout-registration">
+                <p class="checkout-headings">Already registed?</p>
+                <p class="checkout-p">Please log in below</p>
+                <p class="radio-button-label no-margin-left">EMAIL ADDRESS <span class="mandatory-field">*</span></p>
+                <input type="text" class="shipping-fields">
+                <p class="radio-button-label no-margin-left">PASSWORD <span class="mandatory-field">*</span></p>
+                <input type="text" class="shipping-fields">
+                <p class="required-fields">* Required Fields</p>
+                <div class="password">
+                    <a href="#" class="checkout-buttons-names no-margin-top">Log In</a>
+                    <p class="forgot-password">Forgot Password?</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <table class="checkout-table container">
+        <tr>
+            <td class="checkout-h4">02. BILLING INFORMATION</td>
+        </tr>
+        <tr>
+            <td class="checkout-h4">03. Shipping INFORMATION</td>
+        </tr>
+        <tr>
+            <td class="checkout-h4">04. Shipping Method</td>
+        </tr>
+        <tr>
+            <td class="checkout-h4">05. Payment Method</td>
+        </tr>
+        <tr>
+            <td class="checkout-h4">06. Order review</td>
+        </tr>
+    </table>
 
     <div class="subscribe-block">
         <div class="subscribe-content container">
@@ -544,6 +384,7 @@
                 </a>
             </div>
     </footer>
+
 </body>
 
 </html>
