--- a/product.html
+++ b/product.html
@@ -11,7 +11,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Brand Store</title>
+        <title>Brand Store - Product</title>
         <link rel="stylesheet" href="style.css">
     </head>
 
@@ -30,7 +30,7 @@
                     </form>
                 </div>
                 <div class="menu-top-right">
-                    <img src="img/cart.svg" alt="cart">
+                    <a href="cart.html"><img src="img/cart.svg" alt="cart"></a>
                     <a href="#" class="my-account-button">My Account<i
                             class="fa fa-caret-down browse-button-arrow my-account-button-arrow" aria-hidden="true"></i></a>
                 </div>
@@ -226,18 +226,18 @@
         
     <div class="product-top-block">
         <div class="top-block-content container">
-            <h1 class="product-h1">New Arrivals</h1>
-            <ul class="product-crumbs">
+            <h2 class="product-h1">New Arrivals</h2>
+            <nav class="product-crumbs">
                 <li><a href="index.html" class="product-crumbs-link">Home</a>&nbsp;/&nbsp;</li>
                 <li><a href="#" class="product-crumbs-link">Men</a>&nbsp;/&nbsp;</li>
                 <li><a href="#" class="product-crumbs-link-active">New Arrivals</a></li>
-            </ul>
+            </nav>
         </div>
     </div>
 
     <div class="product-image-block">
         <a href="#" class="switch-img"><i class="fa-solid fa-chevron-left"></i></a>
-        <img src="img/product-img.jpg" alt="">
+        <img src="img/product-img.jpg" alt="MOSCHINO CHEAP AND CHIC">
         <a href="#" class="switch-img"><i class="fa-solid fa-chevron-right"></i></a>
     </div>
 
