--- a/cart.html
+++ b/cart.html
@@ -11,11 +11,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Brand Store - Main Page</title>
+    <title>Brand Store - Cart</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+
     <div class="menu">
         <div class="menu-top container">
             <div class="menu-top-left">
@@ -222,236 +223,129 @@
             </nav>
         </div>
     </div>
-    <div class="first-page">
-        <div class="first-page-content container">
-            <h1 class="first-page-h1"><span class="the-brand">THE BRAND</span><br>
-                OF LUXURIOUS <span class="fashion">FASHION</span></h1>
-        </div>
-    </div>
-    <div class="main-page-offers container">
-        <div class="vertical-offers">
-            <a href="#" class="men offers offers-margin">
-                <img src="img/men.jpg" alt="men">
-                <p class="offers-name">Hot deal<br><span class="offers-special-font">for men</span></p>
-            </a>
-            <a href="#" class="accessories offers">
-                <p class="offers-name">Luxurious & trendy<br><span class="offers-special-font">accessories</span>
-                </p>
-            </a>
-        </div>
-        <div class="vertical-offers">
-            <a href="#" class="women offers offers-margin">
-                <img src="img/women.jpg" alt="women">
-                <p class="offers-name">30% offer<br><span class="offers-special-font">women</span></p>
-            </a>
-            <a href="#" class="kids offers">
-                <img src="img/kids.jpg" alt="kids">
-                <p class="offers-name"><span class="new-arrivals">New arrivals</span><br><span
-                        class="offers-special-font">for kids</span></p>
-            </a>
-        </div>
-    </div>
-    <section class="item-sec">
-        <div class="container">
-            <h3 class="featured-items-h3">Featured Items</h3>
-            <p class="featured-items-p">Shop for items based on what we featured in this week</p>
-            <div class="items-row">
-                <div class="item-box">
-                    <div class="item">
-                        <a href="product.html" class="item-link">
-                            <img src="img/Layer_2.jpg" alt="" class="item-picture">
-                            <div class="text-box">
-                                <p class="item-description">Mango People T-shirt</p>
-                                <p class="item-price">$52.00</p>
-                            </div>
-                        </a>
-                        <div class="cart-box">
-                            <a href="#" class="cart-link">
-                                <img src="img/add_to_cart.svg" alt="">
-                                <p class="cart-text">
-                                    Add to Cart
-                                </p>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <div class="item-box">
-                    <div class="item">
-                        <a href="product.html" class="item-link">
-                            <img src="img/Layer_3.jpg" alt="" class="item-picture">
-                            <div class="text-box">
-                                <p class="item-description">Mango People T-shirt</p>
-                                <p class="item-price">$52.00</p>
-                            </div>
-                        </a>
-                        <div class="cart-box">
-                            <a href="#" class="cart-link">
-                                <img src="img/add_to_cart.svg" alt="">
-                                <p class="cart-text">
-                                    Add to Cart
-                                </p>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <div class="item-box">
-                    <div class="item">
-                        <a href="product.html" class="item-link">
-                            <img src="img/Layer_4.jpg" alt="" class="item-picture">
-                            <div class="text-box">
-                                <p class="item-description">Mango People T-shirt</p>
-                                <p class="item-price">$52.00</p>
-                            </div>
-                        </a>
-                        <div class="cart-box">
-                            <a href="#" class="cart-link">
-                                <img src="img/add_to_cart.svg" alt="">
-                                <p class="cart-text">
-                                    Add to Cart
-                                </p>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <div class="item-box">
-                    <div class="item">
-                        <a href="product.html" class="item-link">
-                            <img src="img/Layer_5.jpg" alt="" class="item-picture">
-                            <div class="text-box">
-                                <p class="item-description">Mango People T-shirt</p>
-                                <p class="item-price">$52.00</p>
-                            </div>
-                        </a>
-                        <div class="cart-box">
-                            <a href="#" class="cart-link">
-                                <img src="img/add_to_cart.svg" alt="">
-                                <p class="cart-text">
-                                    Add to Cart
-                                </p>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="items-row">
-                <div class="item-box">
-                    <div class="item">
-                        <a href="product.html" class="item-link">
-                            <img src="img/Layer_6.jpg" alt="" class="item-picture">
-                            <div class="text-box">
-                                <p class="item-description">Mango People T-shirt</p>
-                                <p class="item-price">$52.00</p>
-                            </div>
-                        </a>
-                        <div class="cart-box">
-                            <a href="#" class="cart-link">
-                                <img src="img/add_to_cart.svg" alt="">
-                                <p class="cart-text">
-                                    Add to Cart
-                                </p>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <div class="item-box">
-                    <div class="item">
-                        <a href="product.html" class="item-link">
-                            <img src="img/Layer_7.jpg" alt="" class="item-picture">
-                            <div class="text-box">
-                                <p class="item-description">Mango People T-shirt</p>
-                                <p class="item-price">$52.00</p>
-                            </div>
-                        </a>
-                        <div class="cart-box">
-                            <a href="#" class="cart-link">
-                                <img src="img/add_to_cart.svg" alt="">
-                                <p class="cart-text">
-                                    Add to Cart
-                                </p>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <div class="item-box">
-                    <div class="item">
-                        <a href="product.html" class="item-link">
-                            <img src="img/Layer_8.jpg" alt="" class="item-picture">
-                            <div class="text-box">
-                                <p class="item-description">Mango People T-shirt</p>
-                                <p class="item-price">$52.00</p>
-                            </div>
-                        </a>
-                        <div class="cart-box">
-                            <a href="#" class="cart-link">
-                                <img src="img/add_to_cart.svg" alt="">
-                                <p class="cart-text">
-                                    Add to Cart
-                                </p>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <div class="item-box">
-                    <div class="item">
-                        <a href="product.html" class="item-link">
-                            <img src="img/Layer_9.jpg" alt="" class="item-picture">
-                            <div class="text-box">
-                                <p class="item-description">Mango People T-shirt</p>
-                                <p class="item-price">$52.00</p>
-                            </div>
-                        </a>
-                        <div class="cart-box">
-                            <a href="#" class="cart-link">
-                                <img src="img/add_to_cart.svg" alt="">
-                                <p class="cart-text">
-                                    Add to Cart
-                                </p>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="browse-products">
-                <a href="#" class="browse-products-button">Browse All Products<i
-                        class="fa fa-long-arrow-right browse-products-button-arrow" aria-hidden="true"></i></a>
-            </div>
-    </section>
-    <section class="main-offer container">
-        <div class="main-offer-left">
-            <img src="img/gradient.png" alt="" class="main-offer-grd">
-            <p class="main-offer-txt">30% <span class="offer-txt">OFFER</span><br><span class="for-women">FOR
-                    WOMEN</span>
-            </p>
-        </div>
-        <div class="main-offer-description">
-            <ul class="main-offer-list">
-                <li class="main-offer-item-1">
-                    <div class="main-offer-item-description">
-                        <h4 class="main-offer-h4">Free Delivery</h4>
-                        <p class="main-offer-p">Worldwide delivery on all. Authorit tively morph next-generation
-                            innovation
-                            with extensive models.</p>
-                    </div>
-                </li>
-                <li class="main-offer-item-2">
-                    <div class="main-offer-item-description">
-                        <h4 class="main-offer-h4">Sales & Discounts</h4>
-                        <p class="main-offer-p">Worldwide delivery on all. Authorit tively morph next-generation
-                            innovation
-                            with extensive models.</p>
-                    </div>
-                </li>
-                <li class="main-offer-item-3">
-                    <div class="main-offer-item-description">
-                        <h4 class="main-offer-h4">Quality Assurance</h4>
-                        <p class="main-offer-p offer-p-margin">Worldwide delivery on all. Authorit tively morph
-                            next-generation innovation
-                            with extensive models.</p>
-                    </div>
-                </li>
+
+    <div class="product-top-block">
+        <div class="top-block-content container">
+            <h1 class="product-h1">New Arrivals</h1>
+            <ul class="product-crumbs">
+                <li><a href="index.html" class="product-crumbs-link">Home</a>&nbsp;/&nbsp;</li>
+                <li><a href="#" class="product-crumbs-link">Men</a>&nbsp;/&nbsp;</li>
+                <li><a href="#" class="product-crumbs-link-active">New Arrivals</a></li>
             </ul>
         </div>
-    </section>
+    </div>
+
+    <table class="cart-table container">
+        <tr class="cart-table-headings">
+            <td class="text-align-left">
+                Product Details
+            </td>
+            <td>
+                Unite Price
+            </td>
+            <td>
+                Quantity
+            </td>
+            <td>
+                shipping
+            </td>
+            <td>
+                Subtotal
+            </td>
+            <td>
+                ACTION
+            </td>
+        </tr>
+        <tr class="cart-table-product-details">
+            <td class="cart-table-product">
+                <img src="img/Layer_43.jpg" alt="">
+                <div class="cart-table-product-description">
+                    <p class="cart-table-product-name">Mango People T-shirt</p>
+                    <p><strong>Color:</strong> Red</p>
+                    <p><strong>Size:</strong> Xll</p>
+                </div>
+            </td>
+            <td>$150</td>
+            <td><input type="number" class="cart-item-quantity"></td>
+            <td>FREE</td>
+            <td>$300</td>
+            <td><i class="fa-solid fa-circle-xmark cart-table-action"></i></td>
+        </tr>
+        <tr class="cart-table-product-details">
+            <td class="cart-table-product">
+                <img src="img/Layer_44.jpg" alt="">
+                <div class="cart-table-product-description">
+                    <p class="cart-table-product-name">Mango People T-shirt</p>
+                    <p><strong>Color:</strong> Red</p>
+                    <p><strong>Size:</strong> Xll</p>
+                </div>
+            </td>
+            <td>$150</td>
+            <td><input type="number" class="cart-item-quantity"></td>
+            <td>FREE</td>
+            <td>$300</td>
+            <td><i class="fa-solid fa-circle-xmark cart-table-action"></i></td>
+        </tr>
+        <tr class="cart-table-product-details">
+            <td class="cart-table-product">
+                <img src="img/Layer_45.jpg" alt="">
+                <div class="cart-table-product-description">
+                    <p class="cart-table-product-name">Mango People T-shirt</p>
+                    <p><strong>Color:</strong> Red</p>
+                    <p><strong>Size:</strong> Xll</p>
+                </div>
+            </td>
+            <td>$150</td>
+            <td><input type="number" class="cart-item-quantity"></td>
+            <td>FREE</td>
+            <td>$300</td>
+            <td><i class="fa-solid fa-circle-xmark cart-table-action"></i></td>
+        </tr>
+    </table>
+
+    <div class="cart-buttons container">
+        <div>
+            <a href="#" class="cart-buttons-names">CLEAR SHOPPING CART</a>
+        </div>
+        <div>
+            <a href="#" class="cart-buttons-names">CONTINUE sHOPPING</a>
+        </div>
+    </div>
+
+    <div class="cart-order container">
+        <div class="shipping">
+            <h4 class="shipping-h4">
+                Shipping address
+            </h4>
+            <form action="#">
+                <select id="shipping-city" class="shipping-fields">
+                    <option value="1">New York</option>
+                    <option value="2">Tokyo</option>
+                    <option value="3">Shanghai</option>
+                </select>
+                <br>
+                <input type="text" placeholder="State" class="shipping-fields">
+                <br>
+                <input type="text" placeholder="Postcode / Zip" class="shipping-fields">
+                <br>
+                <button type="submit" class="quote-button">get a quote</button>
+            </form>
+        </div>
+        <div class="coupon">
+            <h4 class="coupon-h4">coupon discount</h4>
+            <p class="coupon-p">
+                Enter your coupon code if you have one
+            </p>
+            <input type="text" placeholder="Coupon Code" class="shipping-fields">        
+            <button type="submit" class="coupon-button">Apply coupon</button>
+        </div>
+        <div class="checkout">
+            <p class="subtotal">Sub total $900</p>
+            <p class="total">TOTAL <span class="total-amount">$900</span></p>
+            <hr class="total-hr">
+            <a href="checkout.html" class="checkout-button">proceed to checkout</a>
+        </div>
+    </div>
 
     <div class="subscribe-block">
         <div class="subscribe-content container">
@@ -544,6 +438,7 @@
                 </a>
             </div>
     </footer>
+
 </body>
 
 </html>
