--- a/index.html
+++ b/index.html
@@ -412,10 +412,9 @@
                 </div>
             </div>
             <div class="browse-products">
-                <a href="product filters.html" class="browse-products-button">Browse All Products<i
+                <a href="#" class="browse-products-button">Browse All Products<i
                         class="fa fa-long-arrow-right browse-products-button-arrow" aria-hidden="true"></i></a>
             </div>
-        </div>
     </section>
     <section class="main-offer container">
         <div class="main-offer-left">
@@ -544,7 +543,6 @@
                     <i class="fa-brands fa-google-plus-g"></i>
                 </a>
             </div>
-        </div>
     </footer>
 </body>
 
