--- a/product.html
+++ b/product.html
@@ -241,7 +241,7 @@
         <a href="#" class="switch-img"><i class="fa-solid fa-chevron-right"></i></a>
     </div>
 
-    <section class="product-description-block container">
+    <div class="product-description-block container">
         <p class="collection">WOMEN COLLECTION</p>
         <div class="collection-hr">
             <hr class="collection-hr-1">
@@ -255,7 +255,6 @@
         </ul>
         <p class="product-price">$561</p>
         <hr class="product-hr">
-        <form>
         <div class="order-selection">
             <div class="order-select-list">
                 <p class="selection-name">
@@ -282,15 +281,14 @@
                 <p class="selection-name">
                     Quantity
                 </p>
-                <input type="number" placeholder="1" class="selection-list selection-list-auto-cursor">
+                <input type="number" placeholder="1" class="selection-list">
             </div>
         </div>
-            <button type="submit" class="product-cart-button">
+            <a href="#" class="product-cart-button">
                 <img src="img/cart-pink.svg" alt="" class="pink-cart-img">
-                Add to Cart
-            </button>
-        </form>
-        </section>
+                <p>Add to Cart</p>
+            </a>
+    </div>
 
     <section class="similar-products container">
         <h3 class="similar-products-h3">you may also like</h3>
@@ -464,7 +462,6 @@
                     <i class="fa-brands fa-google-plus-g"></i>
                 </a>
             </div>
-        </div>
     </footer>
 
 </body>
