--- a/cart.html
+++ b/cart.html
@@ -258,8 +258,7 @@
         </tr>
         <tr class="cart-table-product-details">
             <td class="cart-table-product">
-                <a href="product.html">
-                <img src="img/Layer_43.jpg" alt=""></a>
+                <img src="img/Layer_43.jpg" alt="">
                 <div class="cart-table-product-description">
                     <p class="cart-table-product-name">Mango People T-shirt</p>
                     <p><strong>Color:</strong> Red</p>
@@ -274,8 +273,7 @@
         </tr>
         <tr class="cart-table-product-details">
             <td class="cart-table-product">
-                <a href="product.html">
-                <img src="img/Layer_44.jpg" alt=""></a>
+                <img src="img/Layer_44.jpg" alt="">
                 <div class="cart-table-product-description">
                     <p class="cart-table-product-name">Mango People T-shirt</p>
                     <p><strong>Color:</strong> Red</p>
@@ -290,8 +288,7 @@
         </tr>
         <tr class="cart-table-product-details">
             <td class="cart-table-product">
-                <a href="product.html">
-                <img src="img/Layer_45.jpg" alt=""></a>
+                <img src="img/Layer_45.jpg" alt="">
                 <div class="cart-table-product-description">
                     <p class="cart-table-product-name">Mango People T-shirt</p>
                     <p><strong>Color:</strong> Red</p>
@@ -440,7 +437,6 @@
                     <i class="fa-brands fa-google-plus-g"></i>
                 </a>
             </div>
-        </div>
     </footer>
 
 </body>
