--- a/product.html
+++ b/product.html
@@ -241,7 +241,7 @@
         <a href="#" class="switch-img"><i class="fa-solid fa-chevron-right"></i></a>
     </div>
 
-    <div class="product-description-block container">
+    <section class="product-description-block container">
         <p class="collection">WOMEN COLLECTION</p>
         <div class="collection-hr">
             <hr class="collection-hr-1">
@@ -255,6 +255,7 @@
         </ul>
         <p class="product-price">$561</p>
         <hr class="product-hr">
+        <form>
         <div class="order-selection">
             <div class="order-select-list">
                 <p class="selection-name">
@@ -281,14 +282,15 @@
                 <p class="selection-name">
                     Quantity
                 </p>
-                <input type="number" placeholder="1" class="selection-list">
+                <input type="number" placeholder="1" class="selection-list selection-list-auto-cursor">
             </div>
         </div>
-            <a href="#" class="product-cart-button">
+            <button type="submit" class="product-cart-button">
                 <img src="img/cart-pink.svg" alt="" class="pink-cart-img">
-                <p>Add to Cart</p>
-            </a>
-    </div>
+                Add to Cart
+            </button>
+        </form>
+        </section>
 
     <section class="similar-products container">
         <h3 class="similar-products-h3">you may also like</h3>
@@ -462,6 +464,7 @@
                     <i class="fa-brands fa-google-plus-g"></i>
                 </a>
             </div>
+        </div>
     </footer>
 
 </body>
