--- a/cart.html
+++ b/cart.html
@@ -258,7 +258,8 @@
         </tr>
         <tr class="cart-table-product-details">
             <td class="cart-table-product">
-                <img src="img/Layer_43.jpg" alt="">
+                <a href="product.html">
+                <img src="img/Layer_43.jpg" alt=""></a>
                 <div class="cart-table-product-description">
                     <p class="cart-table-product-name">Mango People T-shirt</p>
                     <p><strong>Color:</strong> Red</p>
@@ -273,7 +274,8 @@
         </tr>
         <tr class="cart-table-product-details">
             <td class="cart-table-product">
-                <img src="img/Layer_44.jpg" alt="">
+                <a href="product.html">
+                <img src="img/Layer_44.jpg" alt=""></a>
                 <div class="cart-table-product-description">
                     <p class="cart-table-product-name">Mango People T-shirt</p>
                     <p><strong>Color:</strong> Red</p>
@@ -288,7 +290,8 @@
         </tr>
         <tr class="cart-table-product-details">
             <td class="cart-table-product">
-                <img src="img/Layer_45.jpg" alt="">
+                <a href="product.html">
+                <img src="img/Layer_45.jpg" alt=""></a>
                 <div class="cart-table-product-description">
                     <p class="cart-table-product-name">Mango People T-shirt</p>
                     <p><strong>Color:</strong> Red</p>
@@ -437,6 +440,7 @@
                     <i class="fa-brands fa-google-plus-g"></i>
                 </a>
             </div>
+        </div>
     </footer>
 
 </body>
