--- a/cart.html
+++ b/cart.html
@@ -36,8 +36,8 @@
             </div>
         </div>
         <hr class="menu-line">
-        <div class="container">
-            <nav class="menu-nav">
+            <nav class="container">
+                <ul class="menu-nav">
                 <li class="menu-nav-list"><a href="#" class="link">Home</a>
                     <div class="mega-box">
                         <div class="mega-item">
@@ -219,9 +219,9 @@
                             <a class="mega-link" href="#">Jackets/Coats</a>
                         </div>
                     </div>
-                </li>
-            </nav>
-        </div>
+                </li>    
+            </ul>
+        </nav>
     </div>
 
     <div class="product-top-block">
