--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
             </div>
         </div>
         <hr class="menu-line">
-        <div class="container">
-            <nav class="menu-nav">
+            <nav class="container">
+                <ul class="menu-nav">
                 <li class="menu-nav-list"><a href="#" class="link">Home</a>
                     <div class="mega-box">
                         <div class="mega-item">
@@ -219,8 +219,8 @@
                         </div>
                     </div>
                 </li>
+                </ul>
             </nav>
-        </div>
     </div>
     <div class="first-page">
         <div class="first-page-content container">
