--- a/product.html
+++ b/product.html
@@ -36,7 +36,7 @@
                 </div>
             </div>
             <hr class="menu-line">
-            <div class="container">
+                <nav class="container">
                 <ul class="menu-nav">
                     <li class="menu-nav-list"><a href="#" class="link">Home</a>
                         <div class="mega-box">
@@ -221,16 +221,18 @@
                         </div>
                     </li>
                 </ul>
-            </div>
+                </nav>
     </div>
         
     <div class="product-top-block">
         <div class="top-block-content container">
             <h2 class="product-h1">New Arrivals</h2>
-            <nav class="product-crumbs">
+            <nav>
+                <ul class="product-crumbs">
                 <li><a href="index.html" class="product-crumbs-link">Home</a>&nbsp;/&nbsp;</li>
                 <li><a href="#" class="product-crumbs-link">Men</a>&nbsp;/&nbsp;</li>
                 <li><a href="#" class="product-crumbs-link-active">New Arrivals</a></li>
+            </ul>
             </nav>
         </div>
     </div>
