--- a/checkout.html
+++ b/checkout.html
@@ -36,8 +36,8 @@
             </div>
         </div>
         <hr class="menu-line">
-        <div class="container">
-            <nav class="menu-nav">
+            <nav class="container">
+                <ul class="menu-nav">
                 <li class="menu-nav-list"><a href="#" class="link">Home</a>
                     <div class="mega-box">
                         <div class="mega-item">
@@ -220,8 +220,8 @@
                         </div>
                     </div>
                 </li>
+                </ul>
             </nav>
-        </div>
     </div>
 
     <div class="product-top-block">
