--- a/product filters.html
+++ b/product filters.html
@@ -36,7 +36,7 @@
                 </div>
             </div>
             <hr class="menu-line">
-            <div class="container">
+                <nav class="container">
                 <ul class="menu-nav">
                     <li class="menu-nav-list"><a href="#" class="link">Home</a>
                         <div class="mega-box">
@@ -221,16 +221,18 @@
                         </div>
                     </li>
                 </ul>
-            </div>
+                </nav>
     </div>
         
     <div class="product-top-block">
         <div class="top-block-content container">
             <h2 class="product-h1">New Arrivals</h2>
-            <nav class="product-crumbs">
+            <nav>
+                <ul class="product-crumbs">
                 <li><a href="index.html" class="product-crumbs-link">Home</a>&nbsp;/&nbsp;</li>
                 <li><a href="#" class="product-crumbs-link">Men</a>&nbsp;/&nbsp;</li>
                 <li><a href="#" class="product-crumbs-link-active">New Arrivals</a></li>
+            </ul>
             </nav>
         </div>
     </div>
@@ -269,19 +271,23 @@
             <div class="search-result-filter">
                 <div class="trending-now">
                     <h4 class="search-result-filter-h4">trending now</h4>
-                    <nav class="trending-now-nav">
+                    <nav>
+                        <ul class="trending-now-nav">
                         <li><a href="#" class="trending-now-link">Bohemian</a></li>
                         <li>|</li>
                         <li><a href="#" class="trending-now-link">Floral</a></li>
                         <li>|</li>
                         <li><a href="#" class="trending-now-link">Lace</a></li>
+                        </ul>
                     </nav>
-                    <nav class="trending-now-nav">
+                    <nav>
+                        <ul class="trending-now-nav trending-now-nav-mb">
                         <li><a href="#" class="trending-now-link">Floral</a></li>
                         <li>|</li>
                         <li><a href="#" class="trending-now-link">Lace</a></li>
                         <li>|</li>
                         <li><a href="#" class="trending-now-link">Bohemian</a></li>
+                        </ul>
                     </nav>
                 </div>
                 <fieldset class="size">
